<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/yearlyReportFragment"
        android:title="Report"
        android:icon="@drawable/yearly_report_icon" />
    <item
        android:id="@+id/chatFragment"
        android:title="Chat"
        android:icon="@drawable/chat_icon" />
    <item
        android:id="@+id/homeFragment"
        android:title="Home"
        android:icon="@drawable/home_icon" />
    <item
        android:id="@+id/accountInfoFragment"
        android:title="Profile"
        android:icon="@drawable/profile_icon"/>
</menu>


